<resources>
    <string name="app_name">RemindMe</string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="date_btn">Date</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="quiz_btn">Quiz</string>
    <string name="number_memory_btn">Number Memory Game</string>

    <string name="add_note">add note</string>

    <string name="question1">Andrzej Duda jest prezydentem Polski</string>
    <string name="question2">II Wojna Swiatowa miała miejsce w latach 1939–1945</string>
    <string name="question3">Stan wojenny mial miejsce w latach 1981–1983</string>
    <string name="question4">Jarosław Kaczynski jest prezydentem Polski</string>
    <string name="question5">Aktualnie trzeba nosic maseczki w miejscach publicznych</string>
    <string name="trueString">TRUE</string>
    <string name="falseString">FALSE</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="show_correct_answer_button">SHOW CORRECT ANSWER</string>
    <string name="reset">RESET</string>
    <string name="save">Save</string>

    <string name="guess_number">What was the number?</string>
    <string name="confirm_btn">Confirm</string>
    <string name="reset_btn">Reset</string>
    <string name="font_size_level_from_1_to_3">Font size level (from 1 to 3)</string>
    <string name="home_address">Home address</string>

</resources>